--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+db/
+target/
+dist/
+.asciidoctor/
+.idea/
+*.iml
+*.zip
+*.jar
+
 
 # Created by https://www.toptal.com/developers/gitignore/api/macos
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos
